// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GnoGenesisVault migrate migrates from rewardToken 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 79561,
}
`;

exports[`GnoGenesisVault pulls withdrawals on claim exited assets 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 154334,
}
`;

exports[`GnoGenesisVault update state deducts rewards on first state update 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 148036,
}
`;

exports[`GnoGenesisVault update state skips updating legacy with zero total assets 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 143605,
}
`;

exports[`GnoGenesisVault update state splits penalty between rewardToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 117411,
}
`;

exports[`GnoGenesisVault update state splits reward between rewardToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 165136,
}
`;
